--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.format_sql= true
+
+cloudinary.cloud_name=${cloudinary.cloud_name}
+cloudinary.api_key=${cloudinary.api_key}
+cloudinary.api_secret=${cloudinary.api_secret}
