--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,14 @@ spring.jpa.properties.hibernate.format_sql= true
 cloudinary.cloud_name=${cloudinary.cloud_name}
 cloudinary.api_key=${cloudinary.api_key}
 cloudinary.api_secret=${cloudinary.api_secret}
+
+gmail.host=smtp.gmail.com
+gmail.port=${gmail.port}
+gmail.username=${gmail.username}
+gmail.password=${gmail.password}
+
+gmail.props.protocol=smtp
+gmail.props.auth=true
+gmail.props.starttls=true
+gmail.props.debug=true
+gmail.props.ssl=true
