--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.config.import = file:env.properties
-spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/gestione_dispositivi
+spring.config.import=file:env.properties
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestione_dispositivi
 spring.datasource.username=postgres
-spring.datasource.password= ${postgres.password}
+spring.datasource.password=${postgres.password}
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=public
-spring.jpa.hibernate.ddl-auto= update
-
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.format_sql= true
 
