--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-spring.config.import=file:env.properties
+#spring.config.import=file:envi.properties
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/gestione_dispositivi
 spring.datasource.username=postgres
-spring.datasource.password=${postgres.password}
+spring.datasource.password=Maxilopez2311
 spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.hibernate.ddl-auto=update
+
 
 cloudinary.cloud_name=${cloudinary.cloud_name}
 cloudinary.api_key=${cloudinary.api_key}
